test/functions/typeMethods/error-message-when-not-applicable.chpl
class C {
  proc type typeMethod() where isInt(numLocales) {
    writeln("C.typeMethod()");
  }
}

int.typeMethod();
